// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalStroke /> by default matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--default c0"
/>
`;

exports[`<VerticalStroke /> with className prop matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--default c0 custom__class"
/>
`;

exports[`<VerticalStroke /> with size="big" prop matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--big c0"
/>
`;

exports[`<VerticalStroke /> with size="default" prop matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--default c0"
/>
`;

exports[`<VerticalStroke /> with size="huge" prop matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--huge c0"
/>
`;

exports[`<VerticalStroke /> with size="tiny" prop matches with snapshot 1`] = `
.c0.k-VerticalStroke {
  display: block;
  border: none;
  background: #222;
}

.c0.k-VerticalStroke--tiny {
  height: 1.25rem;
  width: 0.125rem;
}

.c0.k-VerticalStroke--default {
  height: 1.875rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--big {
  height: 3.125rem;
  width: 0.25rem;
}

.c0.k-VerticalStroke--huge {
  height: 6.25rem;
  width: 0.375rem;
}

<span
  className="k-VerticalStroke k-VerticalStroke--tiny c0"
/>
`;
